Добавил новый блок 'Друзья' и правильно расположил элементы на странице 'Профиль'

--- a/social-web-app/src/HeaderElements/HeaderElements.css
+++ b/social-web-app/src/HeaderElements/HeaderElements.css
@@ -1,19 +1,24 @@
 .sec-wrapper {
-    display: grid;
-    grid-template-columns: 8em 1fr;
     height: 100%;
+    width: 100%;
 }
 
 .sec-wrapper img {
     width: 3em;
-}
-
-.logo {
-    grid-column: 1;
-    margin: 0 auto;
+    height: 3.5em;
 }
 
 .logo-name {
-    grid-column: 2;
-    margin: 0 auto;
+    display: inline-flex;
+    margin-left: 5em;
+    cursor: pointer;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    color: inherit;
 }
