--- a/social-web-app/src/Profile/Posts/Posts.css
+++ b/social-web-app/src/Profile/Posts/Posts.css
@@ -2,19 +2,42 @@
     width: 25em;
     margin: 0 auto;
     display: block;
-}
-.d-flex .form-control {
-    width: 17em;
+    grid-row: 2;
+    grid-column: 1;
 }
 
-li {
-    list-style-type: none;
+/*.d-flex .form-control {*/
+/*    width: 17em;*/
+/*}*/
+
+.item {
     margin-top: 0.5em;
-    padding-left: 0.3em;
     box-shadow: 0 0 3px whitesmoke;
     border-radius: 3px;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 3em 1fr;
+    grid-template-rows: 3em 1fr;
+    grid-gap: 0.5em;
+    padding: 1em;
 }
-ul {
-    margin-left: 0;
-    padding-left: 0;
+
+h5 {
+    grid-row: 1;
+    grid-column: 2;
+    margin-top: 0.45em;
+    color: #ffe1dd;
+}
+
+.item img {
+    grid-row: 1;
+    grid-column: 1;
+    width: 3em;
+    height: 3em;
+    border-radius: 50%;
+}
+
+.item p {
+    grid-row: 2;
+    grid-column: 1/3;
 }
