--- a/social-web-app/src/Profile/Profile.css
+++ b/social-web-app/src/Profile/Profile.css
@@ -1,33 +1,22 @@
 .main-profile-wrapper {
-    border-radius: 0.5em;
     grid-row: 2;
     grid-column: 2/3;
+
+    padding: 1em;
+    border-radius: 0.5em;
     box-shadow: 0 0 1em azure;
     width: 60em;
     margin: 0 auto;
-    position: relative;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-gap: 1em;
 }
 
-.content {
-    width: 100%;
-    height: 15em;
-    padding: 1em;
-    display: flex;
-    flex-direction: row;
+.main-profile-wrapper>* {
+    margin: 0 auto;
 }
 
-.content img {
-    width: 10em;
-    border-radius: 35%;
-    border: 2px solid white;
-    display: block;
-}
 
-.information {
-    width: 10em;
-    height: 5em;
-    margin-left: 1em;
-    margin-top: auto;
-    margin-bottom: auto;
-    display: block;
-}
+
