--- a/social-web-app/src/Profile/Friends/Friends.css
+++ b/social-web-app/src/Profile/Friends/Friends.css
@@ -3,8 +3,8 @@
     grid-column: 1;
     border-radius: 0.5em;
     border: 0.1em solid azure;
-    width: 100%;
-    height: 20em;
+    width: 30em;
+    /*height: 20em;*/
 }
 
 .friends-wrapper h1 {
