--- a/social-web-app/src/Profile/Posts/Posts.css
+++ b/social-web-app/src/Profile/Posts/Posts.css
@@ -1,14 +1,10 @@
 .posts-wrapper {
-    width: 25em;
+    width: 22em;
     margin: 0 auto;
     display: block;
     grid-row: 2;
     grid-column: 1;
 }
-
-/*.d-flex .form-control {*/
-/*    width: 17em;*/
-/*}*/
 
 .item {
     margin-top: 0.5em;
@@ -19,7 +15,7 @@
     grid-template-columns: 3em 1fr;
     grid-template-rows: 3em 1fr;
     grid-gap: 0.5em;
-    padding: 1em;
+    padding: 0.5em 0.5em 0 0.5em;
 }
 
 h5 {
