--- a/social-web-app/src/Profile/Profile.css
+++ b/social-web-app/src/Profile/Profile.css
@@ -2,21 +2,28 @@
     grid-row: 2;
     grid-column: 2/3;
 
-    padding: 1em;
+    padding: 1em 0 1em 0;
     border-radius: 0.5em;
     box-shadow: 0 0 1em azure;
     width: 60em;
     margin: 0 auto;
-
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    grid-gap: 1em;
 }
 
-.main-profile-wrapper>* {
-    margin: 0 auto;
+.profile-information {
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-around;
 }
 
+.post-wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 28em;
+    margin-top: 2em;
+    align-items: center;
+}
 
+.post-input {
+    width: 17em;
+}
 
