--- a/social-web-app/src/Profile/Posts/Posts.css
+++ b/social-web-app/src/Profile/Posts/Posts.css
@@ -1,21 +1,20 @@
 .posts-wrapper {
-    width: 22em;
-    margin: 0 auto;
-    display: block;
+    width: 23em;
     grid-row: 2;
     grid-column: 1;
 }
 
 .item {
-    margin-top: 0.5em;
+    margin: 0.5em auto 0 auto;
     box-shadow: 0 0 3px whitesmoke;
     border-radius: 3px;
     justify-content: center;
     display: grid;
-    grid-template-columns: 3em 1fr;
+    grid-template-columns: 3em 1fr 1em;
     grid-template-rows: 3em 1fr;
     grid-gap: 0.5em;
     padding: 0.5em 0.5em 0 0.5em;
+    width: 20em;
 }
 
 h5 {
@@ -36,4 +35,17 @@ h5 {
 .item p {
     grid-row: 2;
     grid-column: 1/3;
+}
+
+.post-input {
+    width: 20em;
+}
+
+.delete-btn {
+    grid-row: 1/3;
+    grid-column: 3;
+    position: relative;
+    width: 100%;
+    right: 1em;
+    bottom: 0.2em;
 }
