--- a/stardb-app/src/Components/RandomPlanet/RandomPlanet.css
+++ b/stardb-app/src/Components/RandomPlanet/RandomPlanet.css
@@ -1,9 +1,9 @@
 .random-planet-wrapper {
     width: 100%;
-    height: 18em;
+    height: 16em;
     display: flex;
     background-color: #292929;
-    margin: 2em 0 2em 0;
+    margin: 3em 0 2em 0;
     border-radius: .5em;
     padding: 1em;
 }
@@ -15,6 +15,7 @@ ul.rndplanet {
 
 ul.rndplanet p {
     margin: 0;
+    font-size: 1.5em;
 }
 
 ul.rndplanet li {
@@ -28,6 +29,6 @@ hr {
     width: 10em;
 }
 
-img {
+.rand-img {
     border-radius: 1em;
 }
