Переделал функцию удаления постов

--- a/social-web-app/src/Components/Profile/Content/Content.css
+++ b/social-web-app/src/Components/Profile/Content/Content.css
@@ -5,8 +5,12 @@
 
 .content img {
     width: 10em;
-    border-radius: 35%;
-    border: 2px solid white;
+    height: 12em;
+    border-radius: 2em;
+    background-size: cover;
+    background-position: center center;
+    box-shadow: 2px 2px 10px rgb(49, 49, 49);
+    object-fit: cover;
 }
 
 .content p {
