Крайне много изменений

--- a/stardb-app/src/Components/App/App.css
+++ b/stardb-app/src/Components/App/App.css
@@ -1,4 +1,9 @@
 .main-container {
-    width: 60em;
+    width: 80em;
     margin: 0 auto;
+}
+
+.wrapper {
+    display: flex;
+    justify-content: space-between;
 }
